nix/targets/modules/minikube/ingress/bitbucket-gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bitbucket
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/upstream-vhost: bitbucket-message-dumper.dev-functions.future-is-comming.dev.local
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Host: bitbucket-message-dumper.dev-functions.future-is-comming.dev.local";
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: "*.xip.io"
      http:
        paths:
          - path: /gateway
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80
